--- a/home.html
+++ b/home.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>ManualidadesMAriaCe</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ManualidadesMAriaCe</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/997049d577.js" crossorigin="anonymous"></script>
@@ -13,6 +15,18 @@
 </head>
 
 <body>
+    <header>
+        <h1>Manualidades MariaCe</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Acerca de</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <header class="top-header">
         <div class="logoybarra">
             <img src="ManualidadesMariaCe/public/images/Screenshot_2019-09-21-08-44-47.png" class="logo">
@@ -60,7 +74,7 @@
             <div class="listado">
                 <article>
                     <img src="ManualidadesMariaCe/public/images/caracolita.pngC:/Users/HP_ProBook/Desktop/ManualidadesMariaCe/ManualidadesMariaCe/views/home.html"
-                        alt="Caracolita" srcset="">
+                        alt="Caracolita">
                     <div class="main-article">
                         <p class="precio">COP $15.000</p>
                         <p class="descuento">30% off</p>
